# crewai-opportunity-scanner2

./: pyproject.toml
src/config/: crew.py
